# allcleaner

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: main.rs
