[package]
name = "allcleaner"
version = "0.1.1"
edition = "2024"
authors = ["Modeck Rus"]
categories = ["command-line-utilities"]
description = "One-command updater for Linux, Flutter, and Rust — updates your system and cleans project caches in parallel"
documentation = "https://docs.rs/allcleaner"
homepage = "https://github.com/modeckrus/allcleaner"
keywords = ["flutter", "rust", "update", "clean", "cli"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/modeckrus/allcleaner"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
futures = "0.3"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.{ archive-format }"
